04-Aug-2015 Laurent Duflot
	* upgrade to SUSYTools-00-06-17-03 (Photon iso changed to Cone40,
	IsBadJet now only vetoes above 50GeV except if jvtcut)
	* BuildSUSYObject: adapt to new GetTotalMuonSF interface (runnumber 267639),
	test e/mu SF after OR.
	* BuildSUSYObject: move to TST term for MET
	* ZeroLeptonUtil, SR+CRxx: remove negative energy cell code

04-Aug-2015 Laurent Duflot (from Larry Lee)
	* INSTALL, PhysObjProxyUtils, SR+CRxx: adapt to new Ext_RestFrames
	* ZeroLeptonCutVal, cutfile8TeV_RJigsaw.dat: add jet pT cut for RJigSaw
	* ZeroLeptonNTVars, FilterUpdateMerge: update naming of RJigSaw variables
	* config/zerolepton_RJigsaw.config: config file for RJigSaw studies

04-Aug-2015 Laurent Duflot
	* tagged as ZeroLeptonRun2-00-00-48

03-Aug-2015 Yu Nakahama
	* Added data/mc15_13TeV_signal_{50ns,25ns}_p2375.ds for mc15 signal samples (SS,GG_direct and GG_onestepCC)
	* Updated makeSignalPointPickle.py for mc15

03-Aug-2015 Laurent Duflot
	* ZeroLeptonRunPeriod.h, JobBookeeping, launch_jobs_on_grid.py: add p2384
	* data/mc15_13TeV_p2375.ds: current list of p2375 mc15 samples ("official")

03-Aug-2015 Laurent Duflot
	* INSTALL: update instructions for cafe and Ext_RestFrames
	* tagged as ZeroLeptonRun2-00-00-47

01-Aug-2015 Laurent Duflot
	* tagged as ZeroLeptonRun2-00-00-46

31-Jul-2015 Laurent Duflot
	* BuildSUSYObjects: record in TStore only shallow copies for systematics
	affecting kinematics
	* SR, CRxx: add switch ON/OFF to fill Reclustering variables
	* PileUpRWProcessor: set default to no reweighting
	* launch_jobs_on_grid.py: unset ROOT_TTREECACHE_SIZE to avoid huge
	memory consumption.

30-Jul-2015 Laurent Duflot
	* SR, CRxx: add switch ON/OFF to fill RJigSaw variables
	* ZeroLeptonNTVars, PhysObjProxyUtils, SR, CRxx: remove old calculation
	of razor variables

29-Jul-2015 Laurent Duflot
	* add data/PRW.mc15_13TeV.410000_r6765_r6282.root
	* zerolepton.config: point to 25ns reference file
	* PhysObjProxyUtils: fix memory leaks
